--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   google_sign_in: ^5.0.4
   provider: ^5.0.0
   font_awesome_flutter: ^9.1.0
+  flutter_launcher_icons: ^0.9.0
+  flutter_local_notifications: ^6.0.0
 
 dev_dependencies:
   flutter_test:
