--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   font_awesome_flutter: ^9.1.0
   flutter_launcher_icons: ^0.9.0
   flutter_local_notifications: ^6.0.0
+  sqflite: ^2.0.0+3
 
 dev_dependencies:
   flutter_test:
