--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   flutter_launcher_icons: ^0.9.0
   flutter_local_notifications: ^6.0.0
   sqflite: ^2.0.0+3
+  flutter_sms: ^2.3.1
+  telephony: ^0.1.4
 
 dev_dependencies:
   flutter_test:
